# hijri_event_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose-prod.yml  compose.local.yml  compose.prod.yml  compose.yml  entrypoint.sh
.sqlx/: query-0b5fedcdb69bf579115798df0e2acf73920cd42dab9f3b641cd8423f8d004f7f.json  query-0e512465c81c983f5dd7649d82dcbb793e964080e012cbb10e96d33fb6c19592.json  query-2167509a4d5ae718492e7432cccdb8e8661b210f8cbcab81839eb805dc74a93d.json  query-2a7c5017b5c70d926165208d368646b2ddb30801a7c2b454ba745faba3e1500d.json  query-2fdaa1ccb4f1ddd6b057a0c9d5114ec600b7c3ac53e982aee4e35f4c2ecd04f5.json  query-34cace6c69156862af42e285235a6ca18cf841528258ed9b29cd1cbb8b230a5c.json  query-40d636b77ae22c519dd9db2f36479b13fb114d2b8d51fed4be5bf41e2e003578.json  query-45974e596c8e6181e2b3aae3e214cedaf7ccf54f050b61e67446c1fdb890778a.json  query-48db9f1e48b9415dde19250f5946c357c35175706fd650944dd8bbc951d1781f.json  query-5e9d1d2f9bac1fa23ac6fa6312a083ae4bee667518c5aa6f26df4711d7545b44.json  query-5f98d4ca72b484facf3a21dce6ab185ac09a5b1a551025ee450d2f63014cc9d6.json  query-67febca011c4612ab6a4e27e6fe394bb88bcd765eafd57a561045f8b13f92dc0.json  query-71e15dc102cbff219f87b377d4da45271dc34ed17bb69ffea9379dc97e327aa0.json  query-744e0714c526e3b6468a6f746e61eee5b5415c3b5c75962b775ed4c2a0790780.json  query-8f7be1885afe2870b5ab9a479e80a02a8b41071e24429d03bfc2c36afe5eb310.json  query-902472463174ea3ffa2f445ae54c374fff028ef71aba7ea4755d83a3aaff1301.json  query-90e8b26e2fc242f07de7cb77ba93a455dfdd067a333d6f3527c69c61871c0d53.json  query-9547d289c77553bbd1d007644fa65c7d4c391cdf89e6d7303a7ca281855289c8.json  query-a8fd19b7be8c96ed01f5057184dcf4eb9253c1558abc65782baa625119e40648.json  query-af61dab504b70c5971e32b2225509092c6e4cb5767da8ae7595b8c5949d86a40.json  query-b0f4711454b1c7a742322a45f6a2d40076766045f0ba6abde6f48d40466c4236.json  query-bd0cce92ea41b2e1429fb71f1c58e0ef8a9696f95680a587c753347c0656b8f5.json  query-d2f57de2251a17cdbbf431ec4f6d21eea70b2c122604f81ba9bb95e3bcf915ea.json  query-e559924057fe87472683e404ae5fb4e45e4816cce49ba999f5917fe81e779281.json  query-eb3a2698b78a3b1211caf4cc85ce47b96409ea5ee452213fb08ce64d75d8cecd.json  query-ef3bca8f77e0990adc99965b9eeda841d0a4768a1f685b788e474e5a5cfe0731.json  query-f18639b88fb5767ac8e74dbe3e030dc632c38349bad4aa9f2546ae285ba56257.json  query-fa94bdaa04a510da0a020a15a6594ecf3a872ebb4bd97c6e278f4856ac6d797b.json
bot_core/: Cargo.toml
bot_core/src/: bot_core.rs  lib.rs  migrator.rs
bot_core/src/db/: job.rs  migrator.rs  mod.rs  postgres_metadata_store.rs  tables.rs
hadith_bot/: Cargo.toml  Dockerfile  compose.local.yml  compose.prod.yml  compose.yml
hadith_bot/src/: bot.rs  (+6 more)
hijri_event_bot/: Cargo.toml  Dockerfile  compose.local.yml  compose.yml
hijri_event_bot/locales/: ba.toml
hijri_event_bot/migrations/: 20250723162614_initial.sql  20250727085854_chat_id_unique.sql  20250806223810_create_users_jobs.sql
hijri_event_bot/src/: api.rs  bot.rs  command.rs  error.rs  job.rs  main.rs  scheduler.rs
hijri_event_bot/src/db/: job.rs  migrator.rs  postgres_metadata_store.rs  tables.rs
hijri_event_bot/src/i18n/: instance.rs  mod.rs  translation_key.rs
locales/: ba.toml
migrations/: 20250725043125_job_id_required.sql  20250725044123_users_add_username.sql  20250806215220_job_extensions_add_type_column.sql
src/: api.rs  bot.rs  error.rs  i18n.rs  main.rs  scheduler.rs
(+7 files in other folders)
