[workspace]
resolver = "3"
members = ["bot_core", "hadith_bot","hijri_event_bot"]
license = "MIT"

# sqlx = { workspace = true }
# pretty_env_logger = { workspace = true }
# log = { workspace = true }
# teloxide = { workspace = true }

[workspace.dependencies]
teloxide = { version = "0.16.0", features = ["macros"] }
log = "0.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid"] }
pretty_env_logger = "0.5"

