[package]
name = "bot_core"
version = "1.0.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
teloxide = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

