[package]
name = "hijri_event_bot"
version = "1.0.0"
edition = "2024"

[dependencies]
teloxide = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio-cron-scheduler = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
bot_core = { path = "../bot_core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono-tz = "0.10.4"
reqwest = "0.12.20"
toml = "0.8.23"